Add particle filter to demo pipeline

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True, add_rect=False):\n",
+    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True, n_calib=0):\n",
     "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
     "    \n",
     "    cmap = plt.get_cmap().copy() \n",
@@ -164,7 +164,7 @@
     "        #ax.set_xticks(np.round(xvalues[::step], 1))\n",
     "        #ax.set_xticklabels(np.round(xvalues[::step], 1))\n",
     "        \n",
-    "    if add_rect:\n",
+    "    if n_calib > 0:\n",
     "        from matplotlib.patches import Rectangle\n",
     "        width = xvalues[n_calib] - xvalues[0]\n",
     "        height= max(yvalues) - min(yvalues)\n",
@@ -414,24 +414,24 @@
    "outputs": [],
    "source": [
     "fig, ax = plot_matrix(dists_cm, results_matrix, distances, xvalues=times, no_deco=no_deco, \n",
-    "                      add_rect=calib_method==\"on_the_fly\")\n",
+    "                      n_calib=n_calib)\n",
     "#save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, xvalues=times,no_deco=no_deco,\n",
-    "                      add_rect=calib_method==\"on_the_fly\")\n",
+    "                      n_calib=n_calib)\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
     "fig, ax = plot_matrix(particle_estimator.get_distances_cm(), results_matrix_part, distances, xvalues=times, no_deco=no_deco,\n",
-    "                      add_rect=calib_method==\"on_the_fly\")\n",
+    "                      n_calib=n_calib)\n",
     "\n",
     "gt_angles = np.full(len(distances), 90)\n",
     "fig, ax = plot_matrix(azimuths_deg, results_matrix_angles, gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, angles=True,  \n",
-    "                      add_rect=calib_method==\"on_the_fly\")\n",
+    "                      n_calib=n_calib)\n",
     "fig, ax = plot_matrix(np.array(angles_deg), results_matrix_angles_moving,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
-    "                      add_rect=calib_method==\"on_the_fly\")\n",
+    "                      n_calib=n_calib)\n",
     "fig, ax = plot_matrix(np.array(particle_estimator.ANGLES_DEG), results_matrix_angles_part,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
-    "                      add_rect=calib_method==\"on_the_fly\")"
+    "                      n_calib=n_calib)"
    ]
   },
   {
@@ -688,6 +688,7 @@
    "source": [
     "from utils.plotting_tools import FIGSIZE, save_fig, add_colorbar\n",
     "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM\n",
+    "from generate_classifier_results import WALLS_DICT\n",
     "\n",
     "row = results_df.loc[results_df.appendix == appendix,:].iloc[0]\n",
     "\n",
@@ -695,6 +696,7 @@
     "flying = (positions_cm[:, 2] > FLYING_HEIGHT_CM) & (positions_cm[:, 2] < 100)\n",
     "print(\"not flying:\", np.where(~flying)[0])\n",
     "positions_cm = positions_cm[flying, :]\n",
+    "print(positions_cm.shape)\n",
     "yaws_deg = row.positions[flying, 3]\n",
     "freqs = row.frequencies_matrix[0, :]\n",
     "magnitudes = np.abs(row.stft[flying][:, :, freqs>0])\n",
@@ -711,7 +713,7 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
-    "plot_positions(ax, positions_cm[:n_timesteps, :], wall_y_cm=wall_y_cm)\n",
+    "plot_positions(ax, positions_cm[:n_timesteps, :], walls=WALLS_DICT[exp_name])\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\""
    ]
   },
@@ -736,14 +738,13 @@
     "    pcolorfast_custom(\n",
     "        ax,\n",
     "        np.arange(log_matrix.shape[1]),\n",
-    "        DISTANCES_CM,\n",
+    "        wall_detection.estimator.distances_cm,\n",
     "        log_matrix,\n",
     "        n_xticks=12,\n",
     "        n_yticks=4,\n",
     "        cmap=cmap,\n",
     "        alpha=alpha,\n",
     "    )\n",
-    "    add_rect(ax, WallDetection.N_CALIBRATION, ax.get_ylim()[1], no_deco=True, alpha=1.0)\n",
     "    ax.set_ylabel(\"distance [cm]\")\n",
     "\n",
     "\n",
@@ -823,13 +824,14 @@
    "source": [
     "from audio_gtsam.wall_backend import WallBackend\n",
     "from utils.moving_estimators import get_estimate\n",
-    "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG\n",
+    "from crazyflie_demo.wall_detection import WallDetection\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "estimation_method = \"mean\"\n",
+    "estimator = \"particle\"\n",
     "\n",
     "no_deco = False\n",
-    "wall_detection = WallDetection(python_only=True)\n",
+    "wall_detection = WallDetection(python_only=True, estimator=estimator)\n",
     "wall_backend = WallBackend(use_isam=True)\n",
     "\n",
     "fg_dist_estimates = []\n",
@@ -841,8 +843,8 @@
     "distance_estimates = []\n",
     "std_estimates = []\n",
     "\n",
-    "results_matrix_angles = np.full((len(ANGLES_DEG), n_timesteps), np.nan)\n",
-    "results_matrix_moving = np.full((len(DISTANCES_CM), n_timesteps), np.nan)\n",
+    "results_matrix_angles = np.full((len(wall_detection.estimator.angles_deg), n_timesteps), np.nan)\n",
+    "results_matrix_moving = np.full((len(wall_detection.estimator.distances_cm), n_timesteps), np.nan)\n",
     "\n",
     "for i in range(n_timesteps):\n",
     "    res = wall_detection.listener_callback_offline(\n",
@@ -868,14 +870,14 @@
     "    #plt.plot(freqs, wall_detection.calibration[0, :])\n",
     "    #plt.plot(freqs, wall_detection.calibration_std[0, :])\n",
     "        \n",
-    "    angle_local = wall_detection.moving_estimator.get_local_forward_angle()\n",
-    "    angles_forward.append(angle_local)\n",
+    "    #angle_local = wall_detection.estimator.get_local_forward_angle()\n",
+    "    #angles_forward.append(angle_local)\n",
     "        \n",
     "    __, __, prob_moving_dist, prob_moving_angle = res\n",
     "        \n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    \n",
-    "    d, std = get_estimate(DISTANCES_CM, prob_moving_dist, method=estimation_method)\n",
+    "    d, std = get_estimate(wall_detection.estimator.distances_cm, prob_moving_dist, method=estimation_method)\n",
     "    distance_estimates.append(d)\n",
     "    std_estimates.append(std)\n",
     "    \n",
@@ -886,7 +888,7 @@
     "    pose_factor = wall_backend.add_pose(r_world=positions_cm[i] * 1e-2,  yaw=yaw, verbose=False)\n",
     "    #wall_backend.add_planes_from_distributions(distances_cm, prob_moving_dist, angles_deg, prob_moving_angle, n_estimates=1, verbose=True)\n",
     "    \n",
-    "    wall_backend.add_plane_from_distances(DISTANCES_CM, prob_moving_dist, verbose=False, method=estimation_method)\n",
+    "    wall_backend.add_plane_from_distances(wall_detection.estimator.distances_cm, prob_moving_dist, verbose=False, method=estimation_method)\n",
     "    #wall_backend.check_wall(verbose=True)\n",
     "    \n",
     "    d_estimate = wall_backend.get_distance_estimate()\n",
@@ -916,12 +918,12 @@
    "source": [
     "try:\n",
     "    # full results with all paramteres\n",
-    "    #matrix_df = pd.read_pickle(\"results/DistanceFlying_matrices.pkl\")\n",
+    "    matrix_df = pd.read_pickle(\"results/DistanceFlying_matrices.pkl\")\n",
     "    \n",
     "    # results with a bit fewer parameters\n",
-    "    matrix_df_0 = pd.read_pickle(\"results/DistanceFlying_matrices_std0.pkl\")\n",
-    "    matrix_df_1 = pd.read_pickle(\"results/DistanceFlying_matrices_std1.pkl\")\n",
-    "    matrix_df = pd.concat([matrix_df_0, matrix_df_1])\n",
+    "    #matrix_df_0 = pd.read_pickle(\"results/DistanceFlying_matrices_std0.pkl\")\n",
+    "    #matrix_df_1 = pd.read_pickle(\"results/DistanceFlying_matrices_std1.pkl\")\n",
+    "    #matrix_df = pd.concat([matrix_df_0, matrix_df_1])\n",
     "except FileNotFoundError:\n",
     "    print(\"Run generate_flying_results.py to generate results.\")\n",
     "matrix_df"
