Add moving and particle estimators to stepper pipeline

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -248,7 +248,6 @@
     "axs_calib[4].set_title(f\"all mics\")\n",
     "axs_calib[0].set_ylim(2, 12)\n",
     "[axs_calib[0].axvline(f, color='black') for fs in bad_freqs for f in fs]\n",
-    "save_fig(fig_calib, plot_name_calib)\n",
     "\n",
     "# plot positions\n",
     "fig, ax = plt.subplots()\n",
@@ -321,7 +320,7 @@
     "    \n",
     "    particle_estimator = ParticleEstimator(n_particles=100, global_=False)\n",
     "    results_matrix_angles_part = np.full((len(particle_estimator.ANGLES_DEG), n_points), np.nan)\n",
-    "    results_matrix_part = np.full((len(particle_estimator.get_distances_cm()), n_points), np.nan)\n",
+    "    results_matrix_part = np.full((len(particle_estimator.distances_cm), n_points), np.nan)\n",
     "\n",
     "    time_moving = 0\n",
     "    time_single = 0\n",
@@ -415,12 +414,14 @@
    "source": [
     "fig, ax = plot_matrix(dists_cm, results_matrix, distances, xvalues=times, no_deco=no_deco, \n",
     "                      n_calib=n_calib)\n",
-    "#save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, xvalues=times,no_deco=no_deco,\n",
     "                      n_calib=n_calib)\n",
-    "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
-    "fig, ax = plot_matrix(particle_estimator.get_distances_cm(), results_matrix_part, distances, xvalues=times, no_deco=no_deco,\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_hist.pdf\"\n",
+    "save_fig(fig, plot_name)\n",
+    "fig, ax = plot_matrix(particle_estimator.distances_cm, results_matrix_part, distances, xvalues=times, no_deco=no_deco,\n",
     "                      n_calib=n_calib)\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_part.pdf\"\n",
+    "save_fig(fig, plot_name)\n",
     "\n",
     "gt_angles = np.full(len(distances), 90)\n",
     "fig, ax = plot_matrix(azimuths_deg, results_matrix_angles, gt_angles, xvalues=times,\n",
@@ -429,9 +430,13 @@
     "fig, ax = plot_matrix(np.array(angles_deg), results_matrix_angles_moving,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
     "                      n_calib=n_calib)\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_hist_angle.pdf\"\n",
+    "save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(np.array(particle_estimator.ANGLES_DEG), results_matrix_angles_part,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
-    "                      n_calib=n_calib)"
+    "                      n_calib=n_calib)\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_part_angle.pdf\"\n",
+    "save_fig(fig, plot_name)"
    ]
   },
   {
@@ -907,7 +912,7 @@
    "outputs": [],
    "source": [
     "fig, axs = plot_all()\n",
-    "save_fig(fig, 'plots/demo_results_0.pdf')"
+    "save_fig(fig, f'plots/experiments/{exp_name}{appendix}_distributions.pdf')"
    ]
   },
   {
