--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -48,7 +48,7 @@
     "# new buzzer\n",
     "\n",
     "motors = \"all45000\"\n",
-    "bin_selection = 6\n",
+    "bin_selection = 5\n",
     "\n",
     "#motors = \"sweep_and_move\" \n",
     "#bin_selection = 0\n",
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from frequency_analysis import get_spectrogram_raw\n",
+    "from utils.frequency_analysis import get_spectrogram_raw\n",
     "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
     "print(len(freqs))\n",
     "fig, ax = plt.subplots()\n",
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import pcolorfast_custom, add_colorbar, save_fig\n",
+    "from utils.plotting_tools import pcolorfast_custom, add_colorbar, save_fig\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 3)\n",
     "spec = np.abs(spec[freqs>0, 0, :])\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_collector import DataCollector\n",
+    "from utils.data_collector import DataCollector\n",
     "\n",
     "data_collector = DataCollector(exp_name, mic_type)\n",
     "print(data_collector.params)\n",
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix, save_fig\n",
+    "from utils.plotting_tools import plot_df_matrix, save_fig\n",
     "\n",
     "print(data_collector.df)\n",
     "print(data_collector.df.frequency.unique())\n",
@@ -342,7 +342,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
