Change to online calibration

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -296,8 +296,8 @@
     ")\n",
     "\n",
     "inf_machine = Inference()\n",
-    "dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
-    "azimuths_deg = DistanceEstimator.AZIMUTHS_DEG.astype(float)\n",
+    "dists_cm = DistanceEstimator.DISTANCES_CM \n",
+    "azimuths_deg = DistanceEstimator.ANGLES_DEG.astype(float)\n",
     "inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
     "\n",
     "for calib_method, mics, algorithm in itertools.product(calib_method_list, mics_list, algorithm_list):\n",
@@ -339,9 +339,7 @@
     "            distance_estimator.add_distribution(diff * 1e-2, prob_mic, mic_idx)\n",
     "            diff_moving[mic_idx] = (diff, prob_mic)\n",
     "\n",
-    "        __, prob = distance_estimator.get_distance_distribution(\n",
-    "            distances_m=dists_cm * 1e-2, verbose=False, azimuth_deg=WALL_ANGLE_DEG,\n",
-    "        )\n",
+    "        __, prob = distance_estimator.get_distance_distribution(verbose=False, angle_deg=WALL_ANGLE_DEG)\n",
     "        time_single += int(1000*(time.time() - t1))\n",
     "\n",
     "        t1 = time.time()\n",
@@ -359,7 +357,7 @@
     "        \n",
     "        dist_est_cm = dists_cm[np.argmax(prob_moving)]\n",
     "        __, prob_angle = distance_estimator.get_angle_distribution(\n",
-    "            distance_estimate_m=dist_est_cm*1e-2\n",
+    "            distance_estimate_cm=dist_est_cm\n",
     "        )\n",
     "\n",
     "        results_matrix[:, i] = prob\n",
@@ -730,9 +728,12 @@
    "source": [
     "from generate_classifier_results import DIST_THRESH, STD_THRESH, TAIL_THRESH\n",
     "\n",
-    "def plot_distance_matrix(ax, matrix):\n",
+    "def plot_distance_matrix(ax, matrix, distances_cm=None):\n",
     "    from utils.plotting_tools import pcolorfast_custom\n",
     "    from copy import deepcopy\n",
+    "    \n",
+    "    if distances_cm is None:\n",
+    "        distances_cm = wall_detection.estimator.distances_cm\n",
     "\n",
     "    cmap = plt.get_cmap(\"gray\").copy()\n",
     "    alpha = 0.8\n",
@@ -743,7 +744,7 @@
     "    pcolorfast_custom(\n",
     "        ax,\n",
     "        np.arange(log_matrix.shape[1]),\n",
-    "        wall_detection.estimator.distances_cm,\n",
+    "        distances_cm,\n",
     "        log_matrix,\n",
     "        n_xticks=12,\n",
     "        n_yticks=4,\n",
@@ -922,8 +923,9 @@
    "outputs": [],
    "source": [
     "try:\n",
+    "    matrix_df = pd.read_pickle(\"results/demo_results_matrices.pkl\")\n",
     "    # full results with all paramteres\n",
-    "    matrix_df = pd.read_pickle(\"results/DistanceFlying_matrices.pkl\")\n",
+    "    #matrix_df = pd.read_pickle(\"results/DistanceFlying_matrices.pkl\")\n",
     "    \n",
     "    # results with a bit fewer parameters\n",
     "    #matrix_df_0 = pd.read_pickle(\"results/DistanceFlying_matrices_std0.pkl\")\n",
@@ -940,7 +942,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = matrix_df.columns.drop([\"matrix distances\", \"matrix angles\"]).values\n",
+    "categories = matrix_df.columns.drop([\"matrix distances\", \"matrix angles\", \"distances_cm\", \"angles_deg\"]).values\n",
     "\n",
     "def get_title(row, ignore=[]):\n",
     "    title = ''\n",
@@ -980,9 +982,10 @@
     "    \n",
     "    for i, prob_moving_dist in enumerate(matrix.T):\n",
     "        \n",
-    "        d, std = get_estimate(DISTANCES_CM, prob_moving_dist, method=method)\n",
+    "        d, std = get_estimate(row.distances_cm, prob_moving_dist, method=method)\n",
     "        distance_estimates.append(d)\n",
     "        std_estimates.append(std)\n",
+    "    print(len(distance_estimates))\n",
     "        \n",
     "    plot_distance_estimates(axs[0], distance_estimates, label=method)\n",
     "    plot_distance_estimates(axs[1], distance_estimates, label=method)\n",
@@ -993,7 +996,7 @@
     "\n",
     "#if not WallDetection.SIMPLIFY_ANGLES:\n",
     "#    plot_angles(axs[4], results_matrix_angles)\n",
-    "plot_distance_matrix(axs[0], matrix)\n",
+    "plot_distance_matrix(axs[0], matrix, row.distances_cm)\n",
     "\n",
     "axs[0].legend(loc='upper right')\n",
     "axs[1].legend(loc='upper right')\n",
