--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -384,8 +384,8 @@
     "fname = f\"{exp_name}_{motors}\"\n",
     "figsize = 4\n",
     "\n",
-    "methods = ['raw', 'calibrated','theoretical']\n",
-    "mic_idx = 0\n",
+    "methods = ['measured', 'theoretical'] #['raw', 'calibrated','theoretical']\n",
+    "mic_idx = 1\n",
     "fig_all, axs_all = plt.subplots(1, len(methods), sharey=True)\n",
     "fig_all.set_size_inches(len(methods)*figsize, figsize) \n",
     "\n",
@@ -394,7 +394,7 @@
     "        df_norm = df_matrix\n",
     "    elif method == \"theoretical\":\n",
     "        df_norm = get_df_theory(df_freq, df_dist)\n",
-    "    elif method == \"calibrated\":\n",
+    "    elif method == \"measured\":\n",
     "        calib_values = calib_function_median(df_freq)[:, :, None]\n",
     "        df_norm = df_matrix / calib_values\n",
     "\n",
@@ -416,10 +416,9 @@
     "        )\n",
     "        ax.set_title(f\"mic{i} {method}\")\n",
     "        ax.set_xlabel('distance [cm]')\n",
-    "    add_colorbar(fig, ax, im)\n",
+    "    #add_colorbar(fig, ax, im)\n",
     "    #save_fig(fig, f\"plots/{fname}_matrices_{normalization}.png\")\n",
     "    \n",
-    "    axs_all[j].set_ylabel('frequency [Hz]')\n",
     "    ax, im = plot_df_matrix(\n",
     "        df_dist,\n",
     "        df_freq,\n",
@@ -432,7 +431,8 @@
     "    )\n",
     "    ax.set_title(f\"{method}\")\n",
     "    ax.set_xlabel('distance [cm]')\n",
-    "    add_colorbar(fig, ax, im)\n",
+    "    #add_colorbar(fig, ax, im)\n",
+    "axs_all[0].set_ylabel('frequency [Hz]')\n",
     "save_fig(fig_all, f\"{plot_dir}/{fname}_matrices_mic{mic_idx}.png\")"
    ]
   },
@@ -452,7 +452,7 @@
     "color = {\n",
     "    \"theoretical\": \"black\",\n",
     "    \"calibrated\": \"C2\",\n",
-    "    \"raw\": \"C3\",\n",
+    "    #\"raw\": \"C3\",\n",
     "    \"random\":\"C4\",\n",
     "    \"fixed\":\"C5\"\n",
     "}\n",
@@ -477,10 +477,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
+    "plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
     "\n",
     "# add extra columns for plots\n",
-    "from generate_stepper_results_cdfs import DISCRETIZATIONS\n",
+    "from generate_filtering_results import DISCRETIZATIONS\n",
     "for discretization in plot_df.discretization.unique():\n",
     "    step_cm, step_deg = DISCRETIZATIONS[discretization]\n",
     "    distances_cm = np.arange(7, 100, step=step_cm)\n",
@@ -520,7 +522,8 @@
     "    xticklabels = [f\"{n_a:.0f}\\n{n_d:.0f}\\n{n_p:.0f}\" for (n_a, n_d, n_p) in zip(median.index, median[\"number distances\"], particles_error.keys())]\n",
     "    ax.set_xticks(xs, labels=xticklabels)\n",
     "\n",
-    "    leg = ax.legend(loc='upper left', bbox_to_anchor=[1.2, 1.0])\n",
+    "    #leg = ax.legend(loc='upper left', bbox_to_anchor=[1.2, 1.0])\n",
+    "    leg = ax.legend(loc='upper center')\n",
     "    ax.grid(True)\n",
     "    ax.set_xlabel(\"\\# angles \\n \\# distances \\n \\# particles\")\n",
     "    ax.xaxis.set_label_coords(-0.10, -0.025)\n",
@@ -529,7 +532,7 @@
     "    ax_time.yaxis.set_tick_params(colors=\"C1\")\n",
     "    ax.yaxis.set_tick_params(colors=\"C0\")\n",
     "    #ax.set_title(f\"{algorithm}\")\n",
-    "    #save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_time-error.pdf\")"
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_time-error.pdf\")"
    ]
   },
   {
@@ -538,7 +541,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_df = pd.read_pickle(\"results/stepper_results_cdfs.pkl\")\n",
+    "def add_double_legend(ax):\n",
+    "    leg = ax.legend(loc='lower left', bbox_to_anchor=[1.0, 0.5], title=\"discretization method\")\n",
+    "    lines = []\n",
+    "    for name, c in color.items():\n",
+    "        name = \"measured\" if name == \"calibrated\" else name\n",
+    "        lines.append(ax.plot([], [], color=c)[0])\n",
+    "    ax.legend(lines, color.keys(), loc='upper left', bbox_to_anchor=[1.0, 0.5], title=\"used data\")\n",
+    "    ax.add_artist(leg)\n",
+    "    \n",
+    "\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_cdfs.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
     "#plot_df = err_df.copy()\n",
     "\n",
     "X_MAX = {\n",
@@ -561,16 +575,14 @@
     "            label = None\n",
     "        ax.plot(cdf, np.linspace(0, 1, len(cdf)), color=color[color_name], linestyle=ls[ls_name], label=label)\n",
     "        \n",
-    "    for name, c in color.items():\n",
-    "        ax.plot([], [], color=c, label=name)\n",
     "    ax.grid(True)\n",
     "    ax.set_xlim(0, X_MAX[algorithm])\n",
     "    ax.set_title(f\"{discretization} discretization, {algorithm}\")\n",
     "    ax.set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
     "    ax.set_ylabel(\"cdf [-]\")\n",
-    "    leg = ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])\n",
+    "    add_double_legend(ax)\n",
     "    \n",
-    "    #save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
    ]
   },
   {
@@ -587,8 +599,8 @@
     "    #\"algorithm\": [\"bayes distance\", \"bayes angle\"],\n",
     "    #\"discretization\": \"medium\"\n",
     "#}\n",
-    "chosen_dict = {}\n",
-    "plot_df = filter_by_dict(err_df, chosen_dict)\n",
+    "#plot_df = filter_by_dict(plot_df, chosen_dict)\n",
+    "#chosen_dict = {}\n",
     "\n",
     "for (discretization, algorithm), df_dis in plot_df.groupby([\"discretization\", \"algorithm\"], sort=False):\n",
     "    fig, ax = plt.subplots()\n",
@@ -606,15 +618,14 @@
     "            label = None\n",
     "        ax.plot(df.distance, df.error, color=color[color_name], linestyle=ls[ls_name], label=label)\n",
     "        \n",
-    "    for name, c in color.items():\n",
-    "        ax.plot([], [], color=c, label=name)\n",
+    "    add_double_legend(ax)\n",
+    "    \n",
     "    ax.grid(True)\n",
     "    ax.set_title(f\"{discretization} discretization, {algorithm}\")\n",
     "    ax.set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
     "    ax.set_ylabel(\"cdf [-]\")\n",
-    "    leg = ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])\n",
     "    \n",
-    "    #save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_errors.pdf\")"
    ]
   },
   {
