Regenreate flying results

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -97,85 +97,15 @@
     "    ax.axis('equal')\n",
     "    ax.set_xlabel('x [cm]')\n",
     "    ax.set_ylabel('y [cm]')\n",
+    "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    ax.legend([handles[0], handles[-1]], [\"start\", \"end\"], loc='upper right')\n",
     "    \n",
     "    for wall_distance, wall_angle in walls:\n",
     "        print(wall_distance, wall_angle)\n",
     "        ax.arrow(0, 0, wall_distance * np.cos(wall_angle / 180 * np.pi), \n",
     "                 wall_distance * np.sin(wall_angle / 180 * np.pi), color='k', label='_wall', \n",
     "                 width=1)\n",
-    "    ax.grid()\n",
-    "    ax.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True, n_calib=0):\n",
-    "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
-    "    \n",
-    "    cmap = plt.get_cmap().copy() \n",
-    "    cmap.set_bad('gray')\n",
-    "    if xvalues is None:\n",
-    "        xvalues = np.arange(results_matrix.shape[1])\n",
-    "        xlabel = \"index [-]\"\n",
-    "    else:\n",
-    "        xlabel = \"time [s]\"\n",
-    "        \n",
-    "    estimates = get_estimates_here(results_matrix, yvalues)\n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(2 * FIGSIZE, FIGSIZE)\n",
-    "    \n",
-    "    im = ax.pcolormesh(xvalues, yvalues, np.log10(results_matrix) if log else results_matrix, cmap=cmap)\n",
-    "    \n",
-    "    ax.plot(\n",
-    "        xvalues,\n",
-    "        gt_values,\n",
-    "        color=\"black\",\n",
-    "        label=\"ground truth\",\n",
-    "        marker='x'\n",
-    "    )\n",
-    "    ax.set_ylim(min(yvalues), max(yvalues))\n",
-    "    ax.plot(\n",
-    "        xvalues,\n",
-    "        estimates,\n",
-    "        color=\"white\",\n",
-    "        label=\"estimates\",\n",
-    "        marker='o',\n",
-    "        ls='-'\n",
-    "    )\n",
-    "    if no_deco:\n",
-    "        ax.set_yticks([])\n",
-    "        ax.set_xticks([])\n",
-    "    else:\n",
-    "        add_colorbar(fig, ax, im, title=\"log-probability\" if log else \"probability\")\n",
-    "        ax.set_ylabel(\"estimated angle [deg]\" if angles else \"estimated distance [cm]\")\n",
-    "        ax.set_xlabel(xlabel)\n",
-    "        \n",
-    "        leg = ax.legend(framealpha=0, loc='upper right')\n",
-    "        for text in leg.get_texts():\n",
-    "            plt.setp(text, color='w')\n",
-    "        #ax.set_xticks(xticks, labels=xticklabels)\n",
-    "        #ax.set_yticks(yticks, labels=yticks)\n",
-    "        #n_xticks = 5\n",
-    "        #step = len(xvalues) // n_xticks\n",
-    "        #ax.set_xticks(np.round(xvalues[::step], 1))\n",
-    "        #ax.set_xticklabels(np.round(xvalues[::step], 1))\n",
-    "        \n",
-    "    if n_calib > 0:\n",
-    "        from matplotlib.patches import Rectangle\n",
-    "        width = xvalues[n_calib] - xvalues[0]\n",
-    "        height= max(yvalues) - min(yvalues)\n",
-    "        alpha = 0.5\n",
-    "        diff_x = xvalues[1] - xvalues[0]\n",
-    "        xy = (min(xvalues) - diff_x/2, min(yvalues))\n",
-    "        rect = Rectangle(xy, width, height, facecolor='white', alpha=alpha)\n",
-    "        ax.add_patch(rect)\n",
-    "        if not no_deco:\n",
-    "            ax.text(xy[0] + width/2, xy[1]+height/2, \"used for\\ncalibration\", fontdict={'color':'white', 'ha':'center', 'va':'bottom'})\n",
-    "    return fig, ax"
+    "    ax.grid()"
    ]
   },
   {
@@ -220,6 +150,7 @@
     "\n",
     "bad_freqs = []\n",
     "n_calib = 5\n",
+    "figsize = 3\n",
     "\n",
     "\n",
     "flying = row.positions[:, 2] > FLYING_HEIGHT_CM * 1e-2\n",
@@ -251,7 +182,7 @@
     "\n",
     "# plot positions\n",
     "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
+    "fig.set_size_inches(figsize, figsize)\n",
     "plot_positions(ax, positions_cm, WALLS_DICT[exp_name])\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
     "save_fig(fig, plot_name)"
@@ -284,7 +215,7 @@
     "#particle_method = \"gaussian\"\n",
     "particle_method = \"histogram\"\n",
     "n_calib = 5\n",
-    "n_window = 5\n",
+    "n_window = 3\n",
     "simplify_angles = False\n",
     "\n",
     "calib_method_list = [\"on_the_fly\"]#, [\"stepper\"]\n",
@@ -405,19 +336,97 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True, n_calib=0):\n",
+    "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
+    "    \n",
+    "    cmap = plt.get_cmap().copy() \n",
+    "    cmap.set_bad('gray')\n",
+    "    if xvalues is None:\n",
+    "        xvalues = np.arange(results_matrix.shape[1])\n",
+    "        xlabel = \"index [-]\"\n",
+    "    else:\n",
+    "        xlabel = \"time [s]\"\n",
+    "        \n",
+    "    estimates = get_estimates_here(results_matrix, yvalues)\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(2 * FIGSIZE, FIGSIZE)\n",
+    "    \n",
+    "    im = ax.pcolormesh(xvalues, yvalues, np.log10(results_matrix) if log else results_matrix, cmap=cmap)\n",
+    "    \n",
+    "    ax.plot(\n",
+    "        xvalues,\n",
+    "        gt_values,\n",
+    "        color=\"black\",\n",
+    "        label=\"ground truth\",\n",
+    "        marker='x'\n",
+    "    )\n",
+    "    ax.set_ylim(min(yvalues), max(yvalues))\n",
+    "    ax.plot(\n",
+    "        xvalues,\n",
+    "        estimates,\n",
+    "        color=\"white\",\n",
+    "        label=\"estimates\",\n",
+    "        marker='o',\n",
+    "        ls='-'\n",
+    "    )\n",
+    "    if no_deco:\n",
+    "        ax.set_yticks([])\n",
+    "        ax.set_xticks([])\n",
+    "    else:\n",
+    "        add_colorbar(fig, ax, im, title=\"log-probability\" if log else \"probability\")\n",
+    "        ax.set_ylabel(\"estimated angle [deg]\" if angles else \"estimated distance [cm]\")\n",
+    "        ax.set_xlabel(xlabel)\n",
+    "        \n",
+    "        leg = ax.legend(framealpha=0, loc='upper right')\n",
+    "        for text in leg.get_texts():\n",
+    "            plt.setp(text, color='w')\n",
+    "        #ax.set_xticks(xticks, labels=xticklabels)\n",
+    "        #ax.set_yticks(yticks, labels=yticks)\n",
+    "        #n_xticks = 5\n",
+    "        #step = len(xvalues) // n_xticks\n",
+    "        #ax.set_xticks(np.round(xvalues[::step], 1))\n",
+    "        #ax.set_xticklabels(np.round(xvalues[::step], 1))\n",
+    "        \n",
+    "    alpha = 0.7\n",
+    "    if n_calib > 0:\n",
+    "        from matplotlib.patches import Rectangle\n",
+    "        width = xvalues[n_calib] - xvalues[0]\n",
+    "        height= max(yvalues) - min(yvalues)\n",
+    "        diff_x = xvalues[1] - xvalues[0]\n",
+    "        xy = (min(xvalues) - diff_x/2, min(yvalues))\n",
+    "        rect = Rectangle(xy, width, height, facecolor='white', alpha=alpha)\n",
+    "        ax.add_patch(rect)\n",
+    "        if not no_deco:\n",
+    "            ax.text(xy[0] + width/2, xy[1]+height/2, \"used for\\ncalibration\", fontdict={'color':'black', 'ha':'center', 'va':'bottom'})\n",
+    "    return fig, ax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "fig_size = (6, 4)\n",
     "fig, ax = plot_matrix(dists_cm, results_matrix, distances, xvalues=times, no_deco=no_deco, \n",
     "                      n_calib=n_calib)\n",
+    "fig.set_size_inches(*fig_size)\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix.pdf\"\n",
+    "save_fig(fig, plot_name)\n",
+    "\n",
     "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, xvalues=times,no_deco=no_deco,\n",
     "                      n_calib=n_calib)\n",
+    "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_hist.pdf\"\n",
     "save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(particle_estimator.distances_cm, results_matrix_part, distances, xvalues=times, no_deco=no_deco,\n",
     "                      n_calib=n_calib)\n",
+    "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_part.pdf\"\n",
     "save_fig(fig, plot_name)\n",
     "\n",
@@ -425,14 +434,19 @@
     "fig, ax = plot_matrix(azimuths_deg, results_matrix_angles, gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, angles=True,  \n",
     "                      n_calib=n_calib)\n",
+    "fig.set_size_inches(*fig_size)\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_angle.pdf\"\n",
+    "save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(np.array(angles_deg), results_matrix_angles_moving,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
     "                      n_calib=n_calib)\n",
+    "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_hist_angle.pdf\"\n",
     "save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(np.array(particle_estimator.ANGLES_DEG), results_matrix_angles_part,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
     "                      n_calib=n_calib)\n",
+    "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_part_angle.pdf\"\n",
     "save_fig(fig, plot_name)"
    ]
