Online calibration for stepper and flying results

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -152,7 +152,6 @@
     "n_calib = 5\n",
     "figsize = 3\n",
     "\n",
-    "\n",
     "flying = row.positions[:, 2] > FLYING_HEIGHT_CM * 1e-2\n",
     "positions_cm = row.positions[flying, :2] * 1e2\n",
     "yaws_deg = row.positions[flying, 3]\n",
@@ -162,6 +161,11 @@
     "n_points = magnitudes.shape[0]\n",
     "times = row.seconds[flying]\n",
     "distances = get_groundtruth_distances(exp_name, appendix, walls=[[100, 90]], flying=True)\n",
+    "\n",
+    "from utils.constants import SPEED_OF_SOUND\n",
+    "print(freqs[1]-freqs[0])\n",
+    "print(SPEED_OF_SOUND)\n",
+    "print(SPEED_OF_SOUND / (4 * (freqs[1]-freqs[0])))\n",
     "\n",
     "# calibrate and plot calibration\n",
     "calib_on_the_fly = np.median(magnitudes[:n_calib, :, :], axis=0)\n",
