--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -26,9 +26,7 @@
     "rcParams[\"figure.max_open_warning\"] = False\n",
     "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
     "rcParams[\"font.size\"] = 14\n",
-    "rcParams[\"text.usetex\"] = True\n",
-    "import matplotlib\n",
-    "print(matplotlib.__version__)"
+    "rcParams[\"text.usetex\"] = True"
    ]
   },
   {
@@ -114,15 +112,45 @@
     "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
     "if not backup_exists: \n",
     "    print('generate data using script generate_df_results.')\n",
-    "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
-    "print(df_matrix.shape)"
+    "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a utils/inference.py\n",
+    "def get_uniform_grid(xvalues):\n",
+    "    \"\"\" Fill too large spaces of xvalues with uniform sampling of the median spacing of xvalues.\n",
+    "    Example:\n",
+    "    [0, 2, 4, 10, 12, 14]\n",
+    "    becomes\n",
+    "    [0, 2, 4, 6, 8, 10, 12, 14]\n",
+    "    \"\"\"\n",
+    "    counter = 0 \n",
+    "    while 1:\n",
+    "        diffs = np.diff(xvalues)\n",
+    "        median = np.median(diffs)\n",
+    "        diffs = np.r_[median, diffs]\n",
+    "        split = np.where(diffs > median * 1.5)[0]\n",
+    "        if not len(split):\n",
+    "            break\n",
+    "        s = split[0]\n",
+    "        xvalues = np.r_[xvalues[:s], np.arange(xvalues[s-1], xvalues[s]+median, step=median), xvalues[s:]]\n",
+    "        counter += 1\n",
+    "        if counter > 10:\n",
+    "            break\n",
+    "        break\n",
+    "    return xvalues"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Matrix analysis "
+    "# 2. Matrix analysis \n"
    ]
   },
   {
@@ -280,15 +308,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
-    "plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_new.pkl\")\n",
+    "\n",
+    "#plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
+    "#plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
     "\n",
     "# add extra columns for plots\n",
     "from generate_filtering_results import DISCRETIZATIONS\n",
     "for discretization in plot_df.discretization.unique():\n",
     "    step_cm, step_deg = DISCRETIZATIONS[discretization]\n",
-    "    distances_cm = np.arange(7, 100, step=step_cm)\n",
+    "    distances_cm = np.arange(7, 80, step=step_cm)\n",
     "    angles_deg = np.arange(360, step=step_deg)\n",
     "    n_particles = len(distances_cm) * len(angles_deg) // 2\n",
     "    plot_df.loc[plot_df.discretization == discretization, [\"number angles\", \"number distances\", \"number particles\"]] = (len(angles_deg), len(distances_cm), n_particles)\n",
@@ -403,6 +433,8 @@
    "source": [
     "from utils.pandas_utils import filter_by_dict\n",
     "\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
+    "\n",
     "#chosen_dicts = {\n",
     "    #\"algorithm\": [\"bayes distance\", \"bayes angle\"],\n",
     "    #\"discretization\": \"medium\"\n",
@@ -437,6 +469,44 @@
     "    ax.set_ylabel(f\"error [{units[algorithm]}]\")\n",
     "    \n",
     "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_errors.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# use the different online schemes and compare\n",
+    "df_mat = pd.read_pickle(\"results/stepper_results_matrices.pkl\")\n",
+    "df_mat = df_mat[df_mat[\"relative std\"] == 1.0]\n",
+    "\n",
+    "for (calibration, n_window), df_calib in df_mat.groupby([\"calibration name\", \"n window\"]):\n",
+    "    fig, axs = plt.subplots(1, 2)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    for i, row in df_calib.iterrows():\n",
+    "        \n",
+    "        label = f'{round(row[\"calibration param\"], 1)}'\n",
+    "        matrix = row[\"matrix distances\"][0]\n",
+    "        distances_cm = row[\"distances_cm\"]\n",
+    "        \n",
+    "        real_distances = np.arange(matrix.shape[1]) + 7\n",
+    "        distance_estimates = distances_cm[np.argmax(matrix, axis=0)]\n",
+    "        axs[0].plot(np.arange(matrix.shape[1]), real_distances - distance_estimates, label=label)\n",
+    "        \n",
+    "        cdf = np.sort(np.abs(real_distances - distance_estimates))\n",
+    "        axs[1].plot(cdf, np.linspace(0, 1, len(cdf)), label=label)\n",
+    "    axs[0].grid(True)\n",
+    "    axs[1].grid(True)\n",
+    "    axs[1].set_xlim(0, 50)\n",
+    "    axs[0].set_ylim(-50, 50)\n",
+    "    axs[1].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
+    "    #plt.plot(np.arange(matrix.shape[1]), real_distances, color='k')\n",
+    "    plt.ylabel(\"error [cm]\")\n",
+    "    #plt.suptitle(f\"$N_w$={n_window}, calibration {calibration}\", y=0.95)\n",
+    "    plt.suptitle(f\"calibration: {calibration}\", y=0.95)"
    ]
   },
   {
